# Ceobe-Canteen-Desktop

./: .editorconfig  .eslintignore  .eslintrc.js  .eslintrc.json5  .eslintrc.yml  .gitignore  .prettierignore  .prettierrc  .prettierrc.js  .stylelintrc.cjs  .stylelintrc.js  .stylelintrc.json5  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vue.config.js
.github/ISSUE_TEMPLATE/: bug-report---bug-提交.md  feature-request---新特性请求.md
.github/workflows/: release-tauri.yaml  release.yaml
.husky/: install.mjs  pre-push
plugins/version-manager/: .gitignore  Cargo.toml  README.md  build.rs  package.json
plugins/version-manager/guest-js/: index.ts
plugins/version-manager/src/: commands.rs  desktop.rs  lib.rs  manager.rs  mobile.rs  request_models.rs
public/css/: index.scss
script/: path.js  release.js
src/: App.vue  background.js  background.ts  constant.ts  main.js  main.ts  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: user-license.license
src-tauri/capabilities/: main-capabilities.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_launch.rs  hidden_window.rs  main.rs  preview_page.rs  single_instance.rs  state.rs
src-tauri/src/commands/: auto_launch.rs  cache.rs  clipboard.rs  front_logger.rs  hide_notification.rs  init_script.js  is_debug.rs  local_storage.rs  mod.rs  monitor_info.rs  preview_page.rs  quit.rs  request_client.rs  request_refer_image.rs  resource_location.rs  setting_page.rs  should_silence.rs  system_notification.rs  update_available.rs
src-tauri/src/components/: mod.rs
src-tauri/src/components/preview_webview/: commands.rs  mod.rs  set_up.rs
src-tauri/src/request_client/: cache_manage.rs  logging_request_middleware.rs  mod.rs  response_type.rs
src-tauri/src/setup/: logger.rs  mod.rs  single_instance.rs  system_tray.rs
src-tauri/src/storage/: mod.rs
src/api/: electronFunction.js  function.js  function.ts  getImage.js  list.js  list.ts  window.js  window.ts
src/api/managers/: UpdateManager.ts
src/api/mangers/: UpdateManager.ts
src/api/operations/: ceobeRequest.ts  datasourceConfig.ts  localStorage.ts  locationFetch.ts  logger.ts  newestTimeline.ts  notification.ts  operate.ts  preivewWebview.ts  searchWordEvent.ts  updater.ts  version.ts
src/api/resourceFetcher/: announcement.ts  cardList.ts  cookieList.ts  datasourceCombine.ts  datasourceList.ts  newestCookie.ts  resource.ts  searchCookie.ts  toolkits.ts  version.ts  videoList.ts
src/assets/css/: iframe.css  index.scss
src/components/: AppTop.vue  Browser.vue  DonatePage.vue  DownloadSource.vue  Navbar.vue  SettingPage.vue  VersionPage.vue
src/components/Browser/: index.vue
src/components/Card/: Common.vue  Music.vue  Terra.vue  common.vue  music.vue  terra.vue
src/components/CommonWindow/: index.vue
src/components/InfoAndTool/: Announcement.vue  ToolOrSource.vue  VideoList.vue  WeeklyQuest.vue  announcement.vue  toolOrSource.vue  videoList.vue  weeklyQuest.vue
src/components/InfoWindow/: index.vue
src/components/MusicWindow/: index.vue
src/components/Navbar/: index.vue
src/components/SettingItem/: SettingItem.vue
src/components/TerraWindow/: index.vue
src/components/appTop/: donate.vue  index.vue  setting.vue
src/components/browser/: index.vue
src/constant/: index.js
src/plugins/: vuetify.js  vuetify.ts  webfontloader.js  webfontloader.ts  webview.js
src/router/: index.js  index.ts
src/utils/: backgroundUtil.js  backgroundUtil.ts  imageUtil.js  imageUtil.ts  index.js  previewUtil.ts  request.js  requestUtil.js  requestUtil.ts  timeUtil.js  timeUtil.ts  webView.ts
src/view/: AppMain.vue  Background.vue  Notification.vue  Updater.vue
src/view/background/: index.vue
src/view/home/: Home.vue  InfoAndTool.vue  TimeLine.vue  index.vue  infoAndTool.vue  timeLine.vue
src/view/menu/: index.vue
src/view/navbar/: index.vue
src/view/notification/: index.vue
src/view/timeline/: index.vue
