[package]
name = "ceobe-canteen-desktop"
version = "0.1.5"
description = "小刻食堂的桌面端，恭喜你电脑有多了个和小刻一样喜欢吃东西的浏览器内核 "
authors = ["FrozenString<frozenstringstable@gmail.com>"]
license = ""
repository = ""
default-run = "ceobe-canteen-desktop"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["notification-all", "dialog-message", "path-all", "protocol-all", "http-all", "window-all", "clipboard-all", "shell-open", "fs-read-file", "system-tray", "devtools"] }
reqwest = "0.11"
base64 = "0.21.2"
regex = "1"
interprocess = "1"
byteorder = "1.4.3"
auto-launch = "0.4.0"
arboard = "3.2.0"
image = "0.24.7"
thiserror = "1"
once_cell = "1"
pickledb = "0.5.1"
parking_lot = "0.12.1"
dirs = "5.0.1"
http-cache-reqwest = "0.11.1"
reqwest-middleware = "0.2.3"
http = "0.2.9"
url = "2.4.0"
http-cache-semantics = "1.0.1"
http-cache = { version = "0.14.0", default-features = false }
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "time",
    "smallvec",
    "parking_lot",
] }
task-local-extensions = "0.1.4"
[target.'cfg(windows)'.dependencies.windows]
version = "0.39"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
