[package]
name = "ceobe-canteen-desktop"
version = "1.0.2"
description = "小刻食堂的桌面端，恭喜你电脑有多了个和小刻一样喜欢吃东西的浏览器内核 "
authors = ["FrozenString<frozenstringstable@gmail.com>"]
license="AGPL-3"
repository = "https://github.com/Enraged-Dun-Cookie-Development-Team/Ceobe-Canteen-Electron"
default-run = "ceobe-canteen-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = ["notification-all", "dialog-message", "path-all", "protocol-all", "window-all", "clipboard-all", "shell-open", "fs-read-file", "system-tray"] }
reqwest = { version = "0.11", features = ["__tls", "__rustls", "rustls-tls"], default-features = false }
base64 = "0.21"
regex = "1"
interprocess = "1"
byteorder = "1"
auto-launch = "0.4"
arboard = "3"
image = "0.24"
thiserror = "1"
once_cell = "1"
pickledb = "0.5"
parking_lot = "0.12"
http-cache-reqwest = "0.11"
reqwest-middleware = "0.2"
http = "0.2"
url = "2"
http-cache-semantics = "1"
http-cache = { version = "0.14", default-features = false }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time",
    "smallvec",
    "parking_lot",
] }
task-local-extensions = "0.1"
chrono = "0.4"
reqwest-retry = "0.2"
serde_repr = "0.1.16"
[target.'cfg(windows)'.dependencies.windows]
version = "0.39"
features = [
    "UI_Notifications",
    "Data_Xml_Dom",
    "Foundation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level="s"
strip = true
lto = true
