[package]
name = "tauri-plugin-version-manager"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-version-manager"

[dependencies]
#tauri = { version = "2.0.3" }
serde = "1.0"
thiserror = "1.0"
tauri = { version = "1" }
reqwest = { version = "0.12.12", features = ["json"] }
semver = { version = "1.0.24", features = ["serde"] }
url = "2.5.4"
serde_qs = "0.13.0"
[build-dependencies]
#tauri-plugin = { version = "2.0.1", features = ["build"] }
